[package]
name = "bcut"
version = "1.1.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
clap = { version = "3.2", features = ["cargo", "derive"] }

[dependencies.regex]
version = "1.6"
default-features = false
features = ["std"]

[profile.release]
lto = "thin"
