[package]
name = "bcut"
version = "1.1.2"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["cargo", "derive"] }
hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
nom = "7.1"
rustix = { version = "0.38", features = ["fs", "stdio"] }
thiserror = "2.0.3"

[profile.release]
lto = "thin"
debug = 2
